%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: EnemyController
  serializedVersion: 2
  m_AnimatorParameters:
  - m_Name: Attack
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: TakeInjury
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: IsRunning
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 110700000}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1101 &110100000
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110297121}
  m_DstState: {fileID: 110275599}
  m_TransitionDuration: .749999642
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: IsRunning
    m_EventTreshold: 0
    m_ExitTime: .250000358
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110115147
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110297121}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: TakeInjury
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110127138
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110297121}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .749999642
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Attack
    m_EventTreshold: 0
    m_ExitTime: .250000358
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110133694
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110289285}
  m_TransitionDuration: .326086909
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: IsRunning
    m_EventTreshold: 0
    m_ExitTime: .673913121
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110161629
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110289285}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: 7.49999952
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Attack
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110165029
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110275599}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .62499994
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Attack
    m_EventTreshold: 0
    m_ExitTime: .37500006
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110174028
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110275599}
  m_DstState: {fileID: 110289285}
  m_TransitionDuration: .62499994
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: IsRunning
    m_EventTreshold: 0
    m_ExitTime: .37500006
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110186312
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110297121}
  m_DstState: {fileID: 110289285}
  m_TransitionDuration: .749999642
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: IsRunning
    m_EventTreshold: 0
    m_ExitTime: .250000358
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110190738
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110275599}
  m_TransitionDuration: .326086909
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: IsRunning
    m_EventTreshold: 0
    m_ExitTime: .673913121
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110199299
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110289285}
  m_DstState: {fileID: 110275599}
  m_TransitionDuration: 7.49999952
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: IsRunning
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1102 &110200000
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Attack
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400002, guid: a2881a0ed4b38d04ab79911c44bb91be, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 348, y: -216, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110275599
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Charge
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: a2881a0ed4b38d04ab79911c44bb91be, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 360, y: 72, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110289285
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Idle
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400006, guid: a2881a0ed4b38d04ab79911c44bb91be, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 24, y: -216, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110297121
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Injury
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400004, guid: a2881a0ed4b38d04ab79911c44bb91be, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 24, y: -48, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1107 &110700000
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_DefaultState: {fileID: 110200000}
  m_States:
  - {fileID: 110275599}
  - {fileID: 110200000}
  - {fileID: 110297121}
  - {fileID: 110289285}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 0}
      second:
      - {fileID: 110115147}
    data:
      first: {fileID: 110200000}
      second:
      - {fileID: 110133694}
      - {fileID: 110190738}
    data:
      first: {fileID: 110275599}
      second:
      - {fileID: 110174028}
      - {fileID: 110165029}
    data:
      first: {fileID: 110297121}
      second:
      - {fileID: 110186312}
      - {fileID: 110127138}
      - {fileID: 110100000}
    data:
      first: {fileID: 110289285}
      second:
      - {fileID: 110161629}
      - {fileID: 110199299}
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: 36, y: 84, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
